--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install GLPK
-      run: sudo apt install glpk-util
+      run: sudo apt install glpk-utils
     - name: Run basic tests
       run: ./test.sh
 
