Add +x to test.sh before test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install GLPK
-      run: sudo apt install glpk-utils
+      run: sudo apt-get install glpk-utils
     - name: Run basic tests
-      run: ./test.sh
+      run: chmod +x ./test.sh && ./test.sh
 
